# Skittermouse

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  spec.md  todo.md
.github/: copilot-instructions.md
.github/workflows/: cloudflare-pages.yml  coverage.yml  nightly-release.yml  pages.yml
docs/: CNAME  app.js  index.html  privacy.html  robots.txt  site.webmanifest  sitemap.xml  styles.css  terms.html
packaging/: EULA.txt  qqmouse.rc  skittermouse.rc  startup.marker
src/: main.cpp
src/app/: connection_manager.cpp  connection_manager.h  connection_service.cpp  connection_service.h  mesh_node.cpp  mesh_node.h
src/core/: config.cpp  config.h  event_types.h  hotkey.cpp  hotkey.h  key_translation.cpp  key_translation.h  log.cpp  log.h  ownership_state.cpp  ownership_state.h  peer_id.h  server_election.cpp  server_election.h  wake_flow.cpp  wake_flow.h
src/crypto/: base64.cpp  crypto.h  hkdf.cpp  x509_selfsigned.cpp  x509_selfsigned.h
src/net/: discovery_beacon.cpp  discovery_beacon.h  discovery_socket.cpp  discovery_socket.h  discovery_table.cpp  discovery_table.h  encrypted_transport.h  file_channel.cpp  file_channel.h  file_session.cpp  file_session.h  file_transfer.cpp  file_transfer.h  frame_assembler.cpp  frame_assembler.h  message_codec.cpp  ownership_codec.cpp  ownership_codec.h  peer_hello.cpp  peer_hello.h  transport.h  wol_sender.cpp  wol_sender.h  ws_frame.cpp  ws_frame.h  ws_handshake.cpp  ws_handshake.h  ws_transport.h
src/pairing/: ecdh_handshake.cpp  ecdh_handshake.h  pairing_dialog.h  pairing_dialog_mac.mm  pairing_dialog_win.cpp  pairing_exchange.cpp  pairing_exchange.h  verification_code.cpp  verification_code.h
src/platform/: autostart.h  autostart_mac.mm  autostart_win.cpp  capture.h  capture_mac.mm  capture_win.cpp  clipboard.h  clipboard_mac.mm  clipboard_win.cpp  crypto_mac.mm  crypto_posix.cpp  crypto_win.cpp  filepromise.h  filepromise_win.cpp  filepromise_win.h  global_hotkey.h  hotkey_mac.mm  inject_mac.mm  inject_win.cpp  injector.h  lock_mac.mm  tray_app.h  tray_mac.mm  tray_win.cpp  wol_diag.h  wol_diag_win.cpp  ws_transport_mac.mm  ws_transport_posix.cpp  ws_transport_win.cpp
src/ui/: menu_model.cpp  menu_model.h  picker_window_mac.mm  settings_window.h  settings_window_mac.mm  settings_window_win.cpp
tests/: CMakeLists.txt  config_tests.cpp  connection_manager_tests.cpp  connection_service_tests.cpp  crypto_tests.cpp  e2e_full_system_tests.cpp  e2e_mesh_tests.cpp  e2e_meshnode_tests.cpp  e2e_secure_connection_tests.cpp  encrypted_transport_tests.cpp  event_types_tests.cpp  feature_tests.cpp  file_channel_tests.cpp  file_session_tests.cpp  filepromise_win_tests.cpp  key_translation_tests.cpp  log_tests.cpp  mesh_simulator.h  mock_systems.h  net_tests.cpp  ownership_state_tests.cpp  pairing_exchange_tests.cpp  pairing_tests.cpp  server_election_tests.cpp  test_framework.h  test_main.cpp  transport_tests.cpp  wake_flow_tests.cpp  x509_selfsigned_tests.cpp
tests/docker/: Dockerfile  docker-compose.file.yml  docker-compose.pair.yml  docker-compose.yml  run.ps1
tools/: netcheck.cpp  netfile.cpp  netpair.cpp
